# tap-infinity

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_infinity/: client.py  streams.py  tap.py
tap_infinity/tests/: __init__.py  test_core.py
